@@ -1,3 +1,14 @@
+r6 =====================================================================
+* изменён класс ImageGradGen:
+  - исправлен конструктор: теперь проверяется совместимость формата
+    изображения с этим модулем; на данный момент поддерживаются:
+    - 8-битная шкала серого,
+    - 24 и 32 бита RGB.
+  + параметр channels конструктора может иметь значение None, в этом
+    случае количество и номера каналов определяются автоматически
++ добавлена функция get_supported_image(), создающая из указанного
+  изображения совместимое с ImageGradGen
+
 r5 =====================================================================
 * переделан и исправлен конструктор класса GradSender: параметры теперь
   передаются как словарь **kwargs, аналогично конструкторам прочих
@@ -8,9 +19,6 @@ r5 =====================================================================
   метода add_subgen()
 * функция unwrap_values() переделана в grad_values_to_array() и теперь
   возвращает массив байтов
-* изменён класс ImageGradGen:
-  + добавлено поле класса DEFAULT_CHANNELS
-  - исправлен конструктор
 * демонстрационная программа olatest.py:
   * переименована в example.py
   * переписана в б/м нормальный пример вместо чорт знает чего
